2.25.11

  [Jörg Frings-Fürst]
  * Add upstream Rev. 2813:
    - New AST_agent_inbound_status.php.
    - user_status.php: Removed non-functional change-campaign feature
  * Add upstream Rev. 2814:
    - vdc_db_query.php: Fix for no-hopper dnc dialing issue
    - vicidial.php: Fix for no-hopper dnc dialing issue, Small change for two agent events
    
2.25.10

  [Jörg Frings-Fürst]
  * Remove old files from LANG_www.
  * first_server_install.sql:
    - Remove testphones.
  * install.pl:
    - Remove svn.
    - Correct typo.
  * Add upstream Rev. 2812:
    - agi-VDAD_ALL_inbound.agi: Added additional xfer_log details
    - ADMIN_archive_log_tables.pl: Added rolling of vicidial_xfer_log
    - AST_CLOSER_service_level.php,
      AST_CLOSERstats.php,
      AST_CLOSERstats_v2.php,
      AST_CLOSERsummary_hourly.php,
      AST_DIDstats.php,
      AST_DIDstats_v2.php,
      AST_IVRstats.php,
      AST_LISTS_campaign_stats.php,
      AST_LISTS_pass_report.php,
      AST_LISTS_stats.php,
      AST_VDADstats.php,
      AST_agentDIDstats.php,
      AST_agent_days_time.php,
      AST_agent_debug_log_report.php,
      AST_agent_performance_detail.php,
      AST_agent_status_detail.php,
      AST_agent_time_detail.php,
      AST_agent_timeclock_detail.php,
      AST_campaign_status_list_report.php,
      AST_dial_log_report.php,
      AST_dialer_inventory_report.php,
      AST_email_log_report.php,
      AST_hangup_cause_report.php,
      AST_inbound_daily_report.php,
      AST_inbound_forecasting.php,
      AST_performance_comparison_report.php,
      AST_team_performance_detail.php,
      AST_user_group_hourly_detail.php,
      AST_user_group_hourly_detail_v2.php,
      AST_usergroup_login_report.php,
      AST_webserver_url_report.php,
      Erlang_report.php,
      callbacks_bulk_change.php,
      callcard_admin.php,
      callcard_report_export.php,
      called_counts_multilist_report.php,
      fcstats.php,
      fcstats_detail.php,