@@ -564,10 +564,11 @@
 # 170816-2336 - Added ask post-call survey feature for in-group calls
 # 170912-1619 - Fix for no-hopper dnc dialing issue
 # 170913-1747 - Small change for two agent events
+# 170914-0708 - Fix for script tab issue
 #
 
-$version = '2.14-534c';
-$build = '170913-1747';
+$version = '2.14-535c';
+$build = '170914-0708';
 $mel=1;					# Mysql Error Log enabled = 1
 $mysql_log_count=87;
 $one_mysql_log=0;
@@ -8013,19 +8014,26 @@ function set_length(SLnumber,SLlength_goal,SLdirection)
 
 								if (CalL_ScripT_color.length > 1)
 									{document.getElementById("ScriptContents").style.backgroundColor = CalL_ScripT_color;}
-								if ( (view_scripts == 1) && (CalL_ScripT_id.length > 0) )
+								if (view_scripts == 1)
 									{
-									var SCRIPT_web_form = 'http://127.0.0.1/testing.php';
-									var TEMP_SCRIPT_web_form = URLDecode(SCRIPT_web_form,'YES','DEFAULT','1');
-
-									if ( (script_recording_delay > 0) && ( (LIVE_campaign_recording == 'ALLCALLS') || (LIVE_campaign_recording == 'ALLFORCE') ) )
+									if (CalL_ScripT_id.length > 0)
 										{
-										delayed_script_load = 'YES';
-										RefresHScript('CLEAR');
+										var SCRIPT_web_form = 'http://127.0.0.1/testing.php';
+										var TEMP_SCRIPT_web_form = URLDecode(SCRIPT_web_form,'YES','DEFAULT','1');
+
+										if ( (script_recording_delay > 0) && ( (LIVE_campaign_recording == 'ALLCALLS') || (LIVE_campaign_recording == 'ALLFORCE') ) )
+											{
+											delayed_script_load = 'YES';
+											RefresHScript('CLEAR');
+											}
+										else
+											{
+											load_script_contents('ScriptContents','');
+											}
 										}
 									else
 										{
-										load_script_contents('ScriptContents','');
+										RefresHScript('','YES');
 										}
 									}
 
@@ -9396,19 +9404,26 @@ function set_length(SLnumber,SLlength_goal,SLdirection)
 									if ( (LIVE_campaign_recording == 'ALLCALLS') || (LIVE_campaign_recording == 'ALLFORCE') )
 										{all_record = 'YES';}
 
-									if ( (view_scripts == 1) && (campaign_script.length > 0) )
+									if (view_scripts == 1)
 										{
-										var SCRIPT_web_form = 'http://127.0.0.1/testing.php';
-										var TEMP_SCRIPT_web_form = URLDecode(SCRIPT_web_form,'YES','DEFAULT','1');
-
-										if ( (script_recording_delay > 0) && ( (LIVE_campaign_recording == 'ALLCALLS') || (LIVE_campaign_recording == 'ALLFORCE') ) )
+										if (campaign_script.length > 0)
 											{
-											delayed_script_load = 'YES';
-											RefresHScript('CLEAR');
+											var SCRIPT_web_form = 'http://127.0.0.1/testing.php';
+											var TEMP_SCRIPT_web_form = URLDecode(SCRIPT_web_form,'YES','DEFAULT','1');
+
+											if ( (script_recording_delay > 0) && ( (LIVE_campaign_recording == 'ALLCALLS') || (LIVE_campaign_recording == 'ALLFORCE') ) )
+												{
+												delayed_script_load = 'YES';
+												RefresHScript('CLEAR');
+												}
+											else
+												{
+												load_script_contents('ScriptContents','');
+												}
 											}
 										else
 											{
-											load_script_contents('ScriptContents','');
+											RefresHScript('','YES');
 											}
 										}
 
@@ -9474,11 +9489,18 @@ function set_length(SLnumber,SLlength_goal,SLdirection)
 										{
 										FormContentsLoad();
 										}
-									if ( (view_scripts == 1) && (campaign_script.length > 0) )
+									if (view_scripts == 1)
 										{
-										var SCRIPT_web_form = 'http://127.0.0.1/testing.php';
-										var TEMP_SCRIPT_web_form = URLDecode(SCRIPT_web_form,'YES','DEFAULT','1');
-										RefresHScript();
+										if (campaign_script.length > 0)
+											{
+											var SCRIPT_web_form = 'http://127.0.0.1/testing.php';
+											var TEMP_SCRIPT_web_form = URLDecode(SCRIPT_web_form,'YES','DEFAULT','1');
+											RefresHScript();
+											}
+										else
+											{
+											RefresHScript('','YES');
+											}
 										}
 									reselect_preview_dial = 1;
 									}
@@ -9837,19 +9859,26 @@ function set_length(SLnumber,SLlength_goal,SLdirection)
 
 						if (CalL_ScripT_color.length > 1)
 							{document.getElementById("ScriptContents").style.backgroundColor = CalL_ScripT_color;}
-						if ( (view_scripts == 1) && (campaign_script.length > 0) )
+						if (view_scripts == 1)
 							{
-							var SCRIPT_web_form = 'http://127.0.0.1/testing.php';
-							var TEMP_SCRIPT_web_form = URLDecode(SCRIPT_web_form,'YES','DEFAULT','1');
-
-							if ( (script_recording_delay > 0) && ( (LIVE_campaign_recording == 'ALLCALLS') || (LIVE_campaign_recording == 'ALLFORCE') ) )
+							if (campaign_script.length > 0)
 								{
-								delayed_script_load = 'YES';
-								RefresHScript('CLEAR');
+								var SCRIPT_web_form = 'http://127.0.0.1/testing.php';
+								var TEMP_SCRIPT_web_form = URLDecode(SCRIPT_web_form,'YES','DEFAULT','1');
+
+								if ( (script_recording_delay > 0) && ( (LIVE_campaign_recording == 'ALLCALLS') || (LIVE_campaign_recording == 'ALLFORCE') ) )
+									{
+									delayed_script_load = 'YES';
+									RefresHScript('CLEAR');
+									}
+								else
+									{
+									load_script_contents('ScriptContents','');
+									}
 								}
 							else
 								{
-								load_script_contents('ScriptContents','');
+								RefresHScript('','YES');
 								}
 							}
 
@@ -10872,19 +10901,26 @@ function set_length(SLnumber,SLlength_goal,SLdirection)
 							if ( (LIVE_campaign_recording == 'ALLCALLS') || (LIVE_campaign_recording == 'ALLFORCE') )
 								{all_record = 'YES';}
 
-							if ( (view_scripts == 1) && (CalL_ScripT_id.length > 0) )
+							if (view_scripts == 1)
 								{
-								var SCRIPT_web_form = 'http://127.0.0.1/testing.php';
-								var TEMP_SCRIPT_web_form = URLDecode(SCRIPT_web_form,'YES','DEFAULT','1');
-
-								if ( (script_recording_delay > 0) && ( (LIVE_campaign_recording == 'ALLCALLS') || (LIVE_campaign_recording == 'ALLFORCE') ) )
+								if (CalL_ScripT_id.length > 0)
 									{
-									delayed_script_load = 'YES';
-									RefresHScript('CLEAR');
+									var SCRIPT_web_form = 'http://127.0.0.1/testing.php';
+									var TEMP_SCRIPT_web_form = URLDecode(SCRIPT_web_form,'YES','DEFAULT','1');
+
+									if ( (script_recording_delay > 0) && ( (LIVE_campaign_recording == 'ALLCALLS') || (LIVE_campaign_recording == 'ALLFORCE') ) )
+										{
+										delayed_script_load = 'YES';
+										RefresHScript('CLEAR');
+										}
+									else
+										{
+										load_script_contents('ScriptContents','');
+										}
 									}
 								else
 									{
-									load_script_contents('ScriptContents','');
+									RefresHScript('','YES');
 									}
 								}
 
@@ -11618,19 +11654,26 @@ function set_length(SLnumber,SLlength_goal,SLdirection)
 
 							if (CalL_ScripT_color.length > 1)
 								{document.getElementById("ScriptContents").style.backgroundColor = CalL_ScripT_color;}
-							if ( (view_scripts == 1) && (CalL_ScripT_id.length > 0) )
+							if (view_scripts == 1)
 								{
-								var SCRIPT_web_form = 'http://127.0.0.1/testing.php';
-								var TEMP_SCRIPT_web_form = URLDecode(SCRIPT_web_form,'YES','DEFAULT','1');
-
-								if ( (script_recording_delay > 0) && ( (LIVE_campaign_recording == 'ALLCALLS') || (LIVE_campaign_recording == 'ALLFORCE') ) )
+								if (CalL_ScripT_id.length > 0)
 									{
-									delayed_script_load = 'YES';
-									RefresHScript('CLEAR');
+									var SCRIPT_web_form = 'http://127.0.0.1/testing.php';
+									var TEMP_SCRIPT_web_form = URLDecode(SCRIPT_web_form,'YES','DEFAULT','1');
+
+									if ( (script_recording_delay > 0) && ( (LIVE_campaign_recording == 'ALLCALLS') || (LIVE_campaign_recording == 'ALLFORCE') ) )
+										{
+										delayed_script_load = 'YES';
+										RefresHScript('CLEAR');
+										}
+									else
+										{
+										load_script_contents('ScriptContents','');
+										}
 									}
 								else
 									{
-									load_script_contents('ScriptContents','');
+									RefresHScript('','YES');
 									}
 								}
 
