@@ -6,7 +6,9 @@
     - user_status.php: Removed non-functional change-campaign feature
   * Add upstream Rev. 2814:
     - vdc_db_query.php: Fix for no-hopper dnc dialing issue
-    - vicidial.php: Fix for no-hopper dnc dialing issue, Small change for two agent events
+    - vicidial.php: Fix for no-hopper dnc dialing issue, Small change for two agent events.
+  * Add upstream Rev. 2815:
+    - vicidial.php: Fix for script tab issue.
     
 2.25.10
 
